frontend/test/should_pass/MethodTestModel.gm
node class MethodNode{    procedure testProcedure():()    {        externalProcedure();        return ();    }}external procedure externalProcedure();