frontend/test/should_fail/method_model_inh_ovrrd_failxp.gm
external class N
{
	external procedure bar(int, int) : (int, int);
	external procedure baz();
}

external class NN extends N
{
	external procedure bar(int) : (int, int);
	external procedure baz() : (int);
}
